test/typechecker.d/invalid/data1.surc.bad
def enum Boots = { troot fabs }

def enum CBools = { zero one }

b: Boots = zero
